# NetVirtualCamera

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  GenCameraDriver.cpp  GenCameraDriver.h  GenCameraDriverImpl.cpp  ImageCompressor.cpp  ImageCompressor.h  NPPJpegCoder.cpp  NPPJpegCoder.h  NetVirtualCamera.h  RealCameraDriver.cpp  RealCameraDriver.h  base.cpp  config.xml  main.cpp  qthread_main.cpp  qthread_main.h  readme.md
ConfigSample/: config.new.xml  config.old.xml
FileCamera/: FileCamera.cpp  FileCamera.h  ImageZipper.cpp  ImageZipper.h
NetVirtualCamera/: AsioSocket.cpp  AsioSocket.h  CMakeLists.txt  CSharpSocketCppExport.h  CSharpSocketCppExport.lib  NetCameraCore.cpp  NetCameraCore.h  NetCameraHeader.h  NetVirtualCamera.cpp  NetVirtualCamera.h  Netbase.cpp  Netbase.h  Socket.cpp  Socket.h  config.xml
PointGrey/: PointGreyCamera.h
SKEncoder/: SKCommon.hpp  SKEncoder.cpp
SKEncoder/NvEncoder/NvEncoder/: NvEncoder.cpp
SKEncoder/NvEncoder/Utils/: Logger.h  NvCodecUtils.h  NvEncoderCLIOptions.h
Stereo/: StereoCamera.h
XIMEA/: XIMEACamera.h
cuda/: CameraUtilKernel.cu  CameraUtilKernel.h  NPPJpegCoderKernel.h
